@@ -327,8 +327,11 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
        EPSON PX 204
        EPSON PX 504A
        EPSON Stylus CX3900
+       EPSON Stylus NX420
        EPSON Stylus NX530
        EPSON Stylus NX635
+       EPSON Stylus SX420
+       EPSON Stylus TX420
        EPSON Stylus Office BX535WD
        EPSON Stylus Office BX630FW
        EPSON Stylus Office BX635FWD
